// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout reducer should handle LAYOUT_CHANGE_IS_NAV_OPEN 1`] = `
Object {
  "isLoading": false,
  "isNavOpen": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_HIDE_LOADING 1`] = `
Object {
  "isLoading": false,
  "isNavOpen": true,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_INITIALIZE 1`] = `
Object {
  "currentLocation": "some location",
  "currentOrganization": "some organization",
  "isLoading": false,
  "isNavOpen": undefined,
  "items": "some-items",
}
`;

exports[`Layout reducer should handle LAYOUT_SHOW_LOADING 1`] = `
Object {
  "isLoading": true,
  "isNavOpen": true,
  "items": Array [],
}
`;

exports[`Layout reducer should return the initial state 1`] = `
Object {
  "isLoading": false,
  "isNavOpen": true,
  "items": Array [],
}
`;
